@@ -27,4 +27,5 @@ $s_plugin_UploadFile_max_file_size = 'Taille maximum d\'un fichier (Mb)';
 $s_plugin_UploadFile_allowed_extensions = 'Extensions de fichiers autorisées';
 $s_plugin_UploadFile_allowed_extensions_description = 'Saisir les extensions autorisées séparées par des virgules ex: ( .jpg,.png,.doc )';
 $s_plugin_UploadFile_config_action_update = 'Envoyer';
+$s_plugin_UploadFile_warning_mantis_config = 'Votre configuration d\'envoi des fichiers mantis $g_max_file_size est définie à <strong> %s </strong>, merci de la mettre à jour si nécessaire pour faire fonctionner le module';
 ?>
